src/styles/global.css
/*
 *         __
 *        /  \          _____________
 *        |  |        /               \
 *        @  @       | It looks you’re |
 *        || ||      | trying to add   |
 *        || ||   <--| global styles!  |
 *        \___/       \_______________/
 *
 * Hello, friends! This stylesheet should *only* be used for truly global
 * styles, such as resets, accessibility classes, and shared variables.
 *
 * Everything else should be set in a CSS module and imported to the component
 * where it’s used. This helps keep styles scoped to the components that use
 * them, which is good for both performance and maintainability.
 *
 * Also if you don’t do it @jlengstorf will find you and endlessly nitpick your
 * pull requests, so really you’re doing yourself a favor.
 */

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap');

:root {
  /* colors */
  --color-gray: #444;
  --color-black: #111;
  --color-primary: teal;
  --color-white: #fff;
  --color-pink: #e94e93;
  --color-deeppink: #d04ce4;
  --color-purple: #9f44df;
  --color-deeppurple: #7b3bea;

  /* typography */
  --color-text-base: var(--color-gray);
  --color-text-heading: var(--color-black);
  --font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  --font-size-base: 18px;
  --font-weight-base: 400;
  --line-height-base: 1.45;
  --line-height-heading: 1.1;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

html,
body {
  color: var(--color-text-base);
  font-family: var(--font-family);
  font-size: var(--font-size-base);
  font-weight: var(--font-weight-base);
  line-height: var(--line-height-base);
  margin: 0;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-black);
  line-height: var(--line-height-heading);
  font-weight: 600;
  margin: 1rem 0;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
  font-weight: 400;
}

h4 {
  text-transform: uppercase;
  letter-spacing: 0.04rem;
  color: #888;
  font-weight: 400;
}

a,
a:visited,
a:active {
  text-decoration: none;
  color: #7ecece;
}

section {
  padding: 3rem 0;
}

.section-contain {
  max-width: 1100px;
  margin: 0 auto;
}

p {
  padding-bottom: 1.5rem;
}

/* -- Buttons -- */

.btn {
  font-size: 14px;
  font-family: inherit;
  font-weight: 500;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #e9ebeb;
  border: 0;
  border-radius: 6px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: #0e1e24;
  display: inline-block;
  line-height: 20px;
  min-width: 36px;
  outline: 0;
  padding: 8px;
  position: relative;
  text-align: center;
  text-decoration: none;
  vertical-align: middle;
  width: auto;
  cursor: pointer;
}

.btn.btnprimary {
  background-color: #009387;
  color: #fff;
}

.btn.btndark {
  background-color: #0e3d46;
  color: #fff;
}

/* -- Avatar -- */
.avatar {
  width: 30px;
  height: 30px;
  border-radius: 1000px;
  margin-right: 7px;
}

/* -- Utility -- */

.intro {
  padding: 150px 0;
}

@media screen and (min-width: 900px) {
  .intro {
    padding: 150px 0 0 0;
  }
}

.uppercase {
  text-transform: uppercase;
}

.row {
  display: grid;
  grid-template-rows: repeat(1, 1fr);
  grid-row-gap: 30px;
  grid-column-gap: 30px;
}

@media screen and (min-width: 768px) {
  .row {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 900px) {
  .row {
    grid-template-columns: repeat(3, 1fr);
  }
}

.margintop-md {
  margin-top: 50px;
}

.margintop-lg {
  margin-top: 100px;
}

.px3 {
  padding-left: 3rem;
  padding-right: 3rem;
}

.prose p {
  margin-bottom: 1rem;
}

/* ---- SVG STYLES ----- */

/* Radar */

.radar {
  margin: 15px 0 40px;
}

.radar text {
  fill: #ccc;
  font-size: 14px;
  font-family: 'Roboto', sans-serif;
}

.radar circle,
.radar polyline {
  fill: none;
  stroke: rgb(53, 53, 53);
  stroke-width: 1px;
}

.radar .shape {
  mask: url(#Mask);
}

/* Astronaut */

.astronaut .cls-1 {
  mask: url(#mask);
}

.astronaut .cls-2,
.astronaut .cls-4 {
  mix-blend-mode: multiply;
}

.astronaut .cls-2 {
  fill: url(#linear-gradient);
}

.astronaut .cls-3 {
  mask: url(#mask-2);
}

.astronaut .cls-4 {
  fill: url(#linear-gradient-2);
}

.astronaut .cls-5 {
  fill: #d9cdcc;
}

.astronaut .cls-6 {
  fill: #e9dedc;
}

.astronaut .cls-7 {
  fill: #c7bebd;
}

.astronaut .cls-8 {
  fill: #f1f4f6;
}

.astronaut .cls-9 {
  fill: #a8a8a8;
}

.astronaut .cls-10 {
  fill: #cecece;
}

.astronaut .cls-11,
.astronaut .cls-67 {
  fill: #6d6d6d;
}

.astronaut .cls-12 {
  fill: #cecdc8;
}

.astronaut .cls-13 {
  fill: #9c9b99;
}

.astronaut .cls-14 {
  fill: #bbb8b3;
}

.astronaut .cls-15 {
  fill: #eae6e7;
}

.astronaut .cls-16 {
  fill: url(#GradientFill_50);
}

.astronaut .cls-17 {
  fill: #797979;
}

.astronaut .cls-18,
.astronaut .cls-79 {
  fill: #fff;
}

.astronaut .cls-19 {
  fill: #f3f4ed;
}

.astronaut .cls-20 {
  fill: #d2d4c8;
}

.astronaut .cls-21 {
  fill: url(#GradientFill_49);
}

.astronaut .cls-22 {
  fill: #f0f0f6;
}

.astronaut .cls-23 {
  fill: #b5a3a2;
}

.astronaut .cls-24 {
  fill: #d3cecf;
}

.astronaut .cls-25 {
  fill: #bfaea4;
}

.astronaut .cls-26 {
  fill: #a9948c;
}

.astronaut .cls-27 {
  fill: #7a6163;
}

.astronaut .cls-28 {
  fill: #f4f3ee;
}

.astronaut .cls-29 {
  fill: url(#GradientFill_48);
}

.astronaut .cls-30 {
  fill: #b9aca3;
}

.astronaut .cls-31 {
  fill: #c0b0ae;
}

.astronaut .cls-32 {
  fill: #806866;
}

.astronaut .cls-33 {
  fill: url(#GradientFill_47);
}

.astronaut .cls-34 {
  fill: #f6efec;
}

.astronaut .cls-35 {
  fill: #f5efee;
}

.astronaut .cls-36 {
  fill: #ded7d4;
}

.astronaut .cls-37 {
  fill: #f6f6f1;
}

.astronaut .cls-38 {
  fill: #5d3c47;
}
/* ... */

